feat(backend): perimetre patients BCSU + QR codes PDF + travaux en cours
Deploiement groupe du working tree backend (valide mvn -o test).

- Securite : un agent BCSU ne voit/gere que les patients qu'il a crees ou
  ceux de ses collegues rattaches a la meme structure sanitaire
  (PatientService.getAll/search/getById via createurIdsVisiblesParBcsu).
- QR code sur les PDF (lettre de garantie, bon de commande, feuille de soins)
  contenant le numero du document, a scanner par la pharmacie/structure
  (ExportService.qrCodeNumero, iText BarcodeQRCode).
- Numerotation codifiee (NumeroSequenceService/CompteurNumero), constats BCSU,
  nettoyage des contraintes CHECK d'enums, et divers correctifs accumules.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>